[workspace]
members = ["simple-chat", "short-url"]
resolver = "2"
[package]
name = "rust-lession-4"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
ed25519-dalek = {version = "2.1.1",features = ["rand_core"]}
rand = "0.8.5"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
