[package]
name = "simple-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version ="1.37.0" ,features = ["rt","net","rt-multi-thread","macros"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
