[package]
name = "simple-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dashmap = "5.5.3"
futures = "0.3.30"
thiserror = "1.0.61"
tokio = { version ="1.37.0" ,features = ["rt","net","rt-multi-thread","macros"]}
tokio-stream = "0.1.15"
tokio-util = {version = "0.7.11",features = ["codec","net"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
